cleaned up the UI, display quotes and author

--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
   </head>
   <body>
     <div class="container">
+      <header>
+        <h2>Quote Of The Day</h2>
+      </header>
       <div class="quote-box">
-        <i class="fas fa-quote-left"></i>
-        <p id="quote">Loading...</p>
-        <i class="fas fa-quote-right"></i>
-        <span class="author"></span>
+        <p id="quote">
+          <i class="fas fa-quote-left"></i>
+          <span id="quote-text"> Lorem ipsum dolor sit amet.</span>
+          <i class="fas fa-quote-right"></i>
+        </p>
+        <span class="author">author</span>
       </div>
+
       <div class="button-box">
-        <ul></ul>
+        <ul>
+          <!-- <li><i class="fas fa-volume"></i></li> -->
+        </ul>
         <button id="new-quote">New Quote</button>
       </div>
     </div>
