cleaned up code

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <div class="quote-box">
         <p id="quote">
           <i class="fas fa-quote-left"></i>
-          <span id="quote-text"> Lorem ipsum dolor sit amet.</span>
+          <span id="quote-text"> No fluff, Just Action</span>
           <i class="fas fa-quote-right"></i>
         </p>
-        <span class="author">author</span>
+        <span class="author">-- Harry Dunnie</span>
       </div>
 
       <div class="button-box">
