--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
       <div class="button-box">
         <ul>
-          <!-- <li><i class="fas fa-volume"></i></li> -->
+          <li><i class="fa-solid fa-volume-high"></i></li>
+          <li><i class="fa-solid fa-copy"></i></li>
         </ul>
         <button id="new-quote">New Quote</button>
       </div>
